@@ -36,8 +36,12 @@
     <pathling.fhirServerDockerRepo>aehrc/pathling</pathling.fhirServerDockerRepo>
     <pathling.fhirServerDockerTag>latest</pathling.fhirServerDockerTag>
     <pathling.dockerArchitecture>arm64</pathling.dockerArchitecture>
-    <jmh.version>1.36</jmh.version>
-    <pathling.dockerBaseImage>amazoncorretto:11</pathling.dockerBaseImage>
+    <jmh.version>1.37</jmh.version>
+    <pathling.dockerBaseImage>amazoncorretto:17</pathling.dockerBaseImage>
+    <pathling.benchmark.warehouseUrl>file://${project.basedir}/src/test/resources/test-data</pathling.benchmark.warehouseUrl>
+    <pathling.benchmark.databaseName>parquet</pathling.benchmark.databaseName>
+    <pathling.benchmark.warmupIterations>1</pathling.benchmark.warmupIterations>
+    <pathling.benchmark.testIterations>5</pathling.benchmark.testIterations>
   </properties>
 
   <dependencies>
@@ -65,7 +69,7 @@
     </dependency>
     <dependency>
       <groupId>io.delta</groupId>
-      <artifactId>delta-core_${pathling.scalaVersion}</artifactId>
+      <artifactId>delta-spark_${pathling.scalaVersion}</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -74,6 +78,10 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
     </dependency>
 
     <!-- HAPI FHIR -->
@@ -127,6 +135,10 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jetty</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
@@ -153,7 +165,7 @@
     <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>jwks-rsa</artifactId>
-      <version>0.22.0</version>
+      <version>0.22.1</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -178,7 +190,7 @@
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
-      <version>1.11.3</version>
+      <version>1.13.0</version>
     </dependency>
 
     <!-- Testing -->
@@ -355,7 +367,7 @@
         <plugin>
           <groupId>com.google.cloud.tools</groupId>
           <artifactId>jib-maven-plugin</artifactId>
-          <version>3.3.2</version>
+          <version>3.4.2</version>
           <configuration>
             <from>
               <image>${pathling.dockerBaseImage}</image>
@@ -378,7 +390,8 @@
             <container>
               <environment>
                 <PATHLING_VERSION>${project.version}</PATHLING_VERSION>
-                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC</JAVA_TOOL_OPTIONS>
+                <!-- The add-exports and add-opens flags are required for Java 17 -->
+                <JAVA_TOOL_OPTIONS>-Xmx2g -XX:MaxMetaspaceSize=400m -XX:ReservedCodeCacheSize=240m -Xss1m -Duser.timezone=UTC --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</JAVA_TOOL_OPTIONS>
               </environment>
               <labels>
                 <copyright>Copyright © 2018-2023, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230. Licensed under the CSIRO Open Source Software Licence Agreement.</copyright>
@@ -408,6 +421,13 @@
       </plugins>
     </pluginManagement>
   </build>
+  <repositories>
+    <repository>
+      <id>maven_central</id>
+      <name>Maven Central</name>
+      <url>https://repo.maven.apache.org/maven2/</url>
+    </repository>
+  </repositories>
 
   <profiles>
     <profile>
@@ -422,29 +442,29 @@
                 <id>run-benchmark</id>
                 <phase>test</phase>
                 <goals>
-                  <goal>java</goal>
+                  <goal>exec</goal>
                 </goals>
                 <configuration>
-                  <mainClass>au.csiro.pathling.test.benchmark.PathlingBenchmarkRunner</mainClass>
-                  <classpathScope>test</classpathScope>
-                  <cleanupDaemonThreads>false</cleanupDaemonThreads>
-                  <systemProperties>
-                    <property>
-                      <key>spring.profiles.active</key>
-                      <value>unit-test</value>
-                    </property>
-                    <property>
-                      <key>pathling.storage.warehouseUrl</key>
-                      <value>file://${project.basedir}/src/test/resources/test-data</value>
-                    </property>
-                    <property>
-                      <key>pathling.storage.databaseName</key>
-                      <value>parquet</value>
-                    </property>
-                  </systemProperties>
+                  <executable>java</executable>
                   <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>-Xmx6g</argument>
+                    <argument>-XX:MaxMetaspaceSize=400m</argument>
+                    <argument>-XX:ReservedCodeCacheSize=240m</argument>
+                    <argument>-Xss1m</argument>
+                    <argument>-Duser.timezone=UTC</argument>
+                    <argument>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</argument>
+                    <argument>--add-opens=java.base/java.net=ALL-UNNAMED</argument>
+                    <argument>-Dspring.profiles.active=unit-test</argument>
+                    <argument>-Dpathling.storage.warehouseUrl=${pathling.benchmark.warehouseUrl}</argument>
+                    <argument>-Dpathling.storage.databaseName=${pathling.benchmark.databaseName}</argument>
+                    <argument>-Dbenchmark.test.iterations=${pathling.benchmark.testIterations}</argument>
+                    <argument>-Dbenchmark.warmup.iterations=${pathling.benchmark.warmupIterations}</argument>
+                    <argument>au.csiro.pathling.test.benchmark.PathlingBenchmarkRunner</argument>
                     <argument>${project.build.directory}/benchmark</argument>
                   </arguments>
+                  <classpathScope>test</classpathScope>
                 </configuration>
               </execution>
             </executions>
